# context_ad_mpra

./: .gitignore  DATA.md  LICENSE  README.md  environment.yml  pyproject.toml  setp2.convert_count_table_REFALT_Barcodes_20231111.py  step1.map_mpra_20231110.py  step2.convert_count_table_REFALT_Barcodes_20231111.py
annotation_barcodes/: THP1MacrophageBrainR1R2merged20240404_RNA_matched_barcodes_altref.csv  mpra3_annot_All_barcodes.csv  mpra3_annot_BrainR1R2merged20240404_Cortex_barcodes.csv  mpra3_annot_BrainR1R2merged20240404_Hippocampus_barcodes.csv  mpra3_annot_BrainR1R2merged20240404_HippocampusvsCortex_barcodes.csv  mpra3_annot_BrainR1R2merged20240404_HippocampusvsCortex_barcodes_altref.csv  mpra3_annot_BrainR1R2merged20240404_Striatum_barcodes.csv  mpra3_annot_BrainR1R2merged20240404_StriatumvsCortex_barcodes.csv  mpra3_annot_BrainR1R2merged20240404_barcodes.csv  mpra3_annot_BrainR1R2merged20240404_barcodes_interaction.csv  mpra3_annot_BrainR1R2merged20240416_barcodes.csv  mpra3_annot_BrainR1R2merged_barcodes_motif.csv  mpra3_annot_Brain_barcodes.csv  mpra3_annot_GutR1R2merged20240404_LI_barcodes.csv  mpra3_annot_GutR1R2merged20240404_SI_barcodes.csv  mpra3_annot_GutR1R2merged20240404_SIvsLI_barcodes.csv  mpra3_annot_GutR1R2merged20240404_barcodes.csv  mpra3_annot_GutR1R2merged_barcodes_motif.csv  mpra3_annot_HEK293T_barcodes.csv  mpra3_annot_HEK293T_barcodes_motif.csv  mpra3_annot_HMC3_IFNB_barcodes.csv  mpra3_annot_HMC3_IFNB_barcodes_motif.csv  mpra3_annot_HMC3_IFNBvsNaive_barcodes.csv  mpra3_annot_HMC3_IFNBvsNaive_barcodes_altref.csv  (+61 more)
notebooks/: README.md
(+391 files in other folders)
